material: move texture acquisition to Minecraft