@@ -1,43 +1,26 @@
 package dev.comfyfluffy.caustica.rt.material;
 
-import com.mojang.blaze3d.platform.NativeImage;
 import dev.comfyfluffy.caustica.CausticaMod;
 import dev.comfyfluffy.caustica.api.ResourceId;
-import dev.comfyfluffy.caustica.engine.material.MaterialEmissionIndex;
+import dev.comfyfluffy.caustica.engine.material.MaterialCatalog;
+import dev.comfyfluffy.caustica.engine.material.MaterialImage;
+import dev.comfyfluffy.caustica.engine.material.MaterialTextureAsset;
+import dev.comfyfluffy.caustica.engine.material.MaterialTextureKind;
+import dev.comfyfluffy.caustica.engine.material.MaterialUv;
 import dev.comfyfluffy.caustica.engine.material.OpenPbrMaterialDefaults;
-import dev.comfyfluffy.caustica.mixin.SpriteContentsAccessor;
-import dev.comfyfluffy.caustica.mixin.TextureAtlasAccessor;
 import dev.comfyfluffy.caustica.rt.GpuContext;
 import dev.comfyfluffy.caustica.rt.pipeline.RtPipeline;
-import net.minecraft.client.Minecraft;
-import net.minecraft.client.renderer.texture.TextureAtlas;
-import net.minecraft.client.renderer.texture.TextureAtlasSprite;
-import net.minecraft.resources.Identifier;
-import net.minecraft.server.packs.resources.Resource;
-import net.minecraft.util.ARGB;
 
-import java.io.InputStream;
 import java.util.ArrayList;
 import java.util.Collections;
 import java.util.Comparator;
 import java.util.HashMap;
-import java.util.HashSet;
-import java.util.IdentityHashMap;
-import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.Optional;
-import java.util.Set;
 
-/**
- * Compiles block and entity LabPBR inputs into canonical pages with explicit semantic mip chains. The
- * pages hold OpenPBR parameters, so this is where the source format stops existing — see
- * {@link RtLabPbr} for the per-texel adapter and {@code bindings.slang} for the resulting channel ABI.
- */
+/** Compiles host-provided OpenPBR texture inputs into canonical GPU pages. */
 public final class RtBlockMaterials {
     public static final RtBlockMaterials INSTANCE = new RtBlockMaterials();
-
-    // Entry.features uses the shared SurfaceMaterial feature bits (RtMaterialRegistry.FEATURE_*).
 
     private static final int DEFAULT_PAGE_SIZE = 2048;
     private static final int MAX_PAGE_SIZE = 8192;
@@ -45,11 +28,7 @@ public final class RtBlockMaterials {
     private static final int MAX_VALID_LOD = 3;
     private static final int PACK_ALIGNMENT = 1 << MAX_VALID_LOD;
 
-    private final Map<TextureAtlasSprite, Entry> entries = new IdentityHashMap<>();
-    // Logical full-texture/sprite name (entity/zombie/zombie or entity/chest/normal) to canonical page
-    // mapping. Unlike block entries, albedo UVs are filled by
-    // the material-table registry: full textures use [0,1], atlas sprites append their actual atlas rect.
-    private final Map<Identifier, Entry> resourceEntries = new HashMap<>();
+    private final Map<ResourceId, Entry> entries = new HashMap<>();
     private final List<Page> pages = new ArrayList<>();
     private Entry fallback;
     private boolean loggedFailure;
@@ -57,11 +36,17 @@ public final class RtBlockMaterials {
     private RtBlockMaterials() {
     }
 
-    /** Immutable per-sprite page mapping consumed by the material registry. */
+    /** Immutable texture-to-page mapping and compile-time image statistics. */
     public record Entry(int features, int pageIndex, int maxLod,
                         float materialU, float materialV, float materialDu, float materialDv,
                         float albedoU, float albedoV, float albedoInvDu, float albedoInvDv,
-                        RtMaterialDesc.EmissionSummary emissionSummary, RtEmissionGrid emissionGrid) {
+                        RtMaterialDesc.EmissionSummary emissionSummary, RtEmissionGrid emissionGrid,
+                        float averageR, float averageG, float averageB, float averageA,
+                        RtMaterialDesc.EmissionSummary uniformEmissionSummary,
+                        RtEmissionGrid albedoGrid) {
+        public float[] average() {
+            return new float[]{averageR, averageG, averageB, averageA};
+        }
     }
 
     private record Page(RtMaterialPageTexture surface0, RtMaterialPageTexture normal,
@@ -73,35 +58,42 @@ public final class RtBlockMaterials {
         }
     }
 
+    record AlbedoStats(float averageR, float averageG, float averageB, float averageA,
+                       RtMaterialDesc.EmissionSummary uniformSummary,
+                       RtEmissionGrid grid) {
+        private static final AlbedoStats NEUTRAL = new AlbedoStats(1.0f, 1.0f, 1.0f, 0.0f,
+                RtMaterialDesc.EmissionSummary.NONE, null);
+    }
+
     private static final class Candidate {
-        final TextureAtlasSprite sprite;
-        final Identifier name;
-        final Identifier albedoLocation;
+        final MaterialTextureAsset asset;
         final int features;
-        final Identifier specLocation;
-        final Identifier normalLocation;
-        final int width;
-        final int height;
-        int page;
+        int page = -1;
         int x;
         int y;
         RtMaterialDesc.EmissionSummary emissionSummary = RtMaterialDesc.EmissionSummary.NONE;
         RtEmissionGrid emissionGrid;
+        AlbedoStats stats = AlbedoStats.NEUTRAL;
 
-        Candidate(TextureAtlasSprite sprite, Identifier name, Identifier albedoLocation, int features,
-                  Identifier specLocation, Identifier normalLocation, int width, int height) {
-            this.sprite = sprite;
-            this.name = name;
-            this.albedoLocation = albedoLocation;
-            this.features = features;
-            this.specLocation = specLocation;
-            this.normalLocation = normalLocation;
-            this.width = width;
-            this.height = height;
+        Candidate(MaterialTextureAsset asset) {
+            this.asset = asset;
+            int value = 0;
+            if (asset.labPbrSpecular() != null) value |= RtMaterialRegistry.FEATURE_SPEC;
+            if (asset.labPbrNormal() != null) value |= RtMaterialRegistry.FEATURE_NORMAL;
+            if (asset.inferEmissionMask()) value |= RtMaterialRegistry.FEATURE_EMISSION_MASK;
+            features = value;
         }
 
-        boolean blockSprite() {
-            return sprite != null;
+        int width() {
+            return asset.width();
+        }
+
+        int height() {
+            return asset.height();
+        }
+
+        boolean requiresPage() {
+            return features != 0 || asset.kind() == MaterialTextureKind.STANDALONE;
         }
     }
 
@@ -117,8 +109,8 @@ public final class RtBlockMaterials {
         }
 
         boolean place(Candidate candidate) {
-            int cellWidth = align(candidate.width + 2 * GUTTER, PACK_ALIGNMENT);
-            int cellHeight = align(candidate.height + 2 * GUTTER, PACK_ALIGNMENT);
+            int cellWidth = align(candidate.width() + 2 * GUTTER, PACK_ALIGNMENT);
+            int cellHeight = align(candidate.height() + 2 * GUTTER, PACK_ALIGNMENT);
             if (cellWidth > size || cellHeight > size) return false;
             if (x + cellWidth > size) {
                 x = 0;
@@ -134,90 +126,48 @@ public final class RtBlockMaterials {
         }
     }
 
-    /** Drop the previous epoch's CPU mappings and GPU pages. Caller owns the idle/reload boundary. */
+    /** Drop the previous epoch's CPU mappings and GPU pages. Caller owns the idle boundary. */
     public void reset() {
         entries.clear();
-        resourceEntries.clear();
         fallback = null;
         for (Page page : pages) page.destroy();
         pages.clear();
     }
 
-    /** Compile, pack, mip, upload, and publish block-atlas plus authored entity material pages. */
-    public void prepareAll(GpuContext ctx, int materialPageCapacity, MaterialEmissionIndex emissionSemantics,
-                           RtMaterialOverrides overrides) {
-        List<TextureAtlasSprite> sprites = blockSprites();
-        List<Candidate> authored = new ArrayList<>();
+    /** Compile, pack, mip, upload, and publish one immutable host catalog. */
+    public void prepareAll(GpuContext ctx, int materialPageCapacity, MaterialCatalog catalog) {
+        List<Candidate> candidates = new ArrayList<>(catalog.atlasAssets().size() + catalog.standalone().size());
+        catalog.atlasAssets().forEach(asset -> candidates.add(new Candidate(asset)));
+        catalog.standalone().forEach(asset -> candidates.add(new Candidate(asset)));
+        List<Candidate> paged = candidates.stream().filter(Candidate::requiresPage).collect(java.util.stream.Collectors.toCollection(ArrayList::new));
+
         int specCount = 0;
         int normalCount = 0;
         int heuristicCount = 0;
         int largest = 1 + 2 * GUTTER;
-        for (TextureAtlasSprite sprite : sprites) {
-            if (sprite == null) continue;
-            Identifier name = sprite.contents().name();
-            Identifier spec = sibling(name, "_s.png");
-            Identifier normal = sibling(name, "_n.png");
-            int features = 0;
-            if (resourceExists(spec)) {
-                features |= RtMaterialRegistry.FEATURE_SPEC;
-                specCount++;
-            }
-            if (resourceExists(normal)) {
-                features |= RtMaterialRegistry.FEATURE_NORMAL;
-                normalCount++;
-            }
-            // Authored LabPBR owns emission whenever _s exists. Albedo inference is only compiled for
-            // sprites proven to occur on an emitting block state. A resource-pack
-            // emission.luminance_cd_m2 override replaces the level once resolved — it never
-            // changes which sprites get a mask compiled here.
-            ResourceId material = ResourceId.of(name.getNamespace(), name.getPath());
-            if ((features & RtMaterialRegistry.FEATURE_SPEC) == 0 && emissionSemantics.permits(material)) {
-                features |= RtMaterialRegistry.FEATURE_EMISSION_MASK;
-                heuristicCount++;
-            }
-            if (features != 0) {
-                int width = sprite.contents().width();
-                int height = sprite.contents().height();
-                largest = Math.max(largest, Math.max(width, height) + 2 * GUTTER);
-                authored.add(new Candidate(sprite, name, null, features, spec, normal, width, height));
-            }
-        }
-        Map<Identifier, Integer> resourceFeatures = discoverEntityMaterialResources(sprites, overrides);
-        for (Map.Entry<Identifier, Integer> discovered : resourceFeatures.entrySet()) {
-            Identifier albedo = discovered.getKey();
-            int features = discovered.getValue();
-            try (NativeImage image = load(albedo)) {
-                if (image == null || image.getWidth() <= 0 || image.getHeight() <= 0) continue;
-                Identifier name = logicalTextureName(albedo);
-                int width = image.getWidth();
-                int height = image.getHeight();
-                Identifier spec = siblingTexture(albedo, "_s");
-                Identifier normal = siblingTexture(albedo, "_n");
-                largest = Math.max(largest, Math.max(width, height) + 2 * GUTTER);
-                authored.add(new Candidate(null, name, albedo, features, spec, normal, width, height));
-                if ((features & RtMaterialRegistry.FEATURE_SPEC) != 0) specCount++;
-                if ((features & RtMaterialRegistry.FEATURE_NORMAL) != 0) normalCount++;
-            } catch (Throwable t) {
-                warnOnce("RT entity material albedo load failed for " + albedo, t);
-            }
+        for (Candidate candidate : paged) {
+            if ((candidate.features & RtMaterialRegistry.FEATURE_SPEC) != 0) specCount++;
+            if ((candidate.features & RtMaterialRegistry.FEATURE_NORMAL) != 0) normalCount++;
+            if ((candidate.features & RtMaterialRegistry.FEATURE_EMISSION_MASK) != 0) heuristicCount++;
+            largest = Math.max(largest, Math.max(candidate.width(), candidate.height()) + 2 * GUTTER);
         }
 
-        int pageSize = authored.isEmpty() ? 32 : Math.max(DEFAULT_PAGE_SIZE, nextPowerOfTwo(largest));
+        int pageSize = paged.isEmpty() ? 32 : Math.max(DEFAULT_PAGE_SIZE, nextPowerOfTwo(largest));
         if (pageSize > MAX_PAGE_SIZE) {
-            CausticaMod.LOGGER.warn("RT material sprite exceeds canonical page limit ({} > {}); oversized maps use neutral fallback",
+            CausticaMod.LOGGER.warn("RT material asset exceeds canonical page limit ({} > {}); oversized maps use neutral fallback",
                     pageSize, MAX_PAGE_SIZE);
             pageSize = MAX_PAGE_SIZE;
-            authored.removeIf(candidate -> candidate.width + 2 * GUTTER > MAX_PAGE_SIZE
-                    || candidate.height + 2 * GUTTER > MAX_PAGE_SIZE);
-            if (authored.isEmpty()) pageSize = 32;
+            paged.removeIf(candidate -> candidate.width() + 2 * GUTTER > MAX_PAGE_SIZE
+                    || candidate.height() + 2 * GUTTER > MAX_PAGE_SIZE);
+            if (paged.isEmpty()) pageSize = 32;
         }
-        authored.sort(Comparator.<Candidate>comparingInt(candidate -> candidate.height).reversed()
-                .thenComparing(Comparator.comparingInt((Candidate candidate) -> candidate.width).reversed())
-                .thenComparing(candidate -> candidate.name.toString()));
+        paged.sort(Comparator.<Candidate>comparingInt(Candidate::height).reversed()
+                .thenComparing(Comparator.comparingInt(Candidate::width).reversed())
+                .thenComparing(candidate -> candidate.asset.material().toString()));
 
         List<LayoutPage> layouts = new ArrayList<>();
         layouts.add(new LayoutPage(pageSize, true));
-        for (Candidate candidate : authored) {
+        for (Candidate candidate : paged) {
             boolean placed = false;
             for (int i = 0; i < layouts.size(); i++) {
                 if (layouts.get(i).place(candidate)) {
@@ -244,17 +194,23 @@ public final class RtBlockMaterials {
             pagePixels[pageIndex] = new PagePixels(pageSize, mipCount);
         }
         pagePixels[0].writeFallback();
-        // Decode + blit in parallel: each candidate owns a disjoint (aligned, gutter-inclusive) cell of
-        // its page, so writes never overlap; failures only touch the candidate's own fields.
-        authored.parallelStream().forEach(candidate -> {
+        paged.parallelStream().filter(candidate -> candidate.page >= 0).forEach(candidate -> {
             try {
                 Decoded decoded = decode(candidate);
                 candidate.emissionSummary = decoded.emissionSummary();
                 candidate.emissionGrid = decoded.emissionGrid();
+                candidate.stats = decoded.stats();
                 pagePixels[candidate.page].write(candidate, decoded.levels());
             } catch (Throwable t) {
-                warnOnce("RT canonical material decode failed for " + candidate.name, t);
+                warnOnce("RT canonical material decode failed for " + candidate.asset.material(), t);
                 candidate.page = -1;
+            }
+        });
+        candidates.parallelStream().filter(candidate -> candidate.page < 0).forEach(candidate -> {
+            try {
+                candidate.stats = scanAlbedo(candidate.asset);
+            } catch (Throwable t) {
+                warnOnce("RT material image scan failed for " + candidate.asset.material(), t);
             }
         });
         for (int pageIndex = 0; pageIndex < layouts.size(); pageIndex++) {
@@ -272,23 +228,11 @@ public final class RtBlockMaterials {
         float fallbackUv = GUTTER / (float) pageSize;
         fallback = new Entry(0, 0, 0, fallbackUv, fallbackUv,
                 1.0f / pageSize, 1.0f / pageSize, 0, 0, 1, 1,
-                RtMaterialDesc.EmissionSummary.NONE, null);
-        for (TextureAtlasSprite sprite : sprites) {
-            if (sprite != null) entries.put(sprite, fallbackFor(sprite));
-        }
-        for (Candidate candidate : authored) {
-            if (candidate.page < 0) continue;
-            int maxLod = maxLodFor(candidate.width, candidate.height);
-            Entry entry = new Entry(candidate.features, candidate.page, maxLod,
-                    candidate.x / (float) pageSize, candidate.y / (float) pageSize,
-                    candidate.width / (float) pageSize, candidate.height / (float) pageSize,
-                    candidate.blockSprite() ? candidate.sprite.getU0() : 0.0f,
-                    candidate.blockSprite() ? candidate.sprite.getV0() : 0.0f,
-                    candidate.blockSprite() ? inverseExtent(candidate.sprite.getU1() - candidate.sprite.getU0()) : 1.0f,
-                    candidate.blockSprite() ? inverseExtent(candidate.sprite.getV1() - candidate.sprite.getV0()) : 1.0f,
-                    candidate.emissionSummary, candidate.emissionGrid);
-            if (candidate.blockSprite()) entries.put(candidate.sprite, entry);
-            else resourceEntries.put(candidate.name, entry);
+                RtMaterialDesc.EmissionSummary.NONE, null,
+                1.0f, 1.0f, 1.0f, 0.0f, RtMaterialDesc.EmissionSummary.NONE, null);
+        for (Candidate candidate : candidates) {
+            entries.put(candidate.asset.material(), candidate.page >= 0
+                    ? compiledEntry(candidate, pageSize) : fallbackFor(candidate.asset.albedoUv(), candidate.stats));
         }
 
         long bytesPerBundle = 0L;
@@ -297,9 +241,9 @@ public final class RtBlockMaterials {
             bytesPerBundle += (long) w * w * 4L;
             w = Math.max(1, w / 2);
         }
-        CausticaMod.LOGGER.info("RT canonical material pages: blockSprites={}, entityResources={}, spec={}, normal={}, heuristicEmission={}, pages={}, size={}x{}, validLod<={}, gpuMiB={}",
-                sprites.size(), resourceEntries.size(), specCount, normalCount, heuristicCount,
-                pages.size(), pageSize, pageSize, MAX_VALID_LOD,
+        CausticaMod.LOGGER.info("RT canonical material pages: atlasAssets={}, standaloneAssets={}, spec={}, normal={}, heuristicEmission={}, pages={}, size={}x{}, validLod<={}, gpuMiB={}",
+                catalog.atlasAssets().size(), catalog.standalone().size(), specCount, normalCount,
+                heuristicCount, pages.size(), pageSize, pageSize, MAX_VALID_LOD,
                 String.format(java.util.Locale.ROOT, "%.2f", bytesPerBundle * pages.size() * 3.0 / (1024.0 * 1024.0)));
     }
 
@@ -310,40 +254,48 @@ public final class RtBlockMaterials {
         }
     }
 
-    public Entry entry(TextureAtlasSprite sprite) {
-        return entries.getOrDefault(sprite, fallback);
+    public Entry entry(ResourceId material) {
+        return material == null ? fallback : entries.getOrDefault(material, fallback);
     }
 
-    public Map<TextureAtlasSprite, Entry> preparedEntries() {
-        return Collections.unmodifiableMap(new IdentityHashMap<>(entries));
-    }
-
-    public Map<Identifier, Entry> preparedResourceEntries() {
-        return Collections.unmodifiableMap(new HashMap<>(resourceEntries));
+    public Map<ResourceId, Entry> preparedEntries() {
+        return Collections.unmodifiableMap(new HashMap<>(entries));
     }
 
     public void destroy() {
         reset();
     }
 
-    private Entry fallbackFor(TextureAtlasSprite sprite) {
+    private Entry compiledEntry(Candidate candidate, int pageSize) {
+        MaterialUv uv = candidate.asset.albedoUv();
+        AlbedoStats stats = candidate.stats;
+        return new Entry(candidate.features, candidate.page, maxLodFor(candidate.width(), candidate.height()),
+                candidate.x / (float) pageSize, candidate.y / (float) pageSize,
+                candidate.width() / (float) pageSize, candidate.height() / (float) pageSize,
+                uv.u(), uv.v(), uv.inverseDu(), uv.inverseDv(), candidate.emissionSummary,
+                candidate.emissionGrid, stats.averageR(), stats.averageG(), stats.averageB(), stats.averageA(),
+                stats.uniformSummary(), stats.grid());
+    }
+
+    private Entry fallbackFor(MaterialUv uv, AlbedoStats stats) {
         return new Entry(0, fallback.pageIndex(), 0,
                 fallback.materialU, fallback.materialV, fallback.materialDu, fallback.materialDv,
-                sprite.getU0(), sprite.getV0(), inverseExtent(sprite.getU1() - sprite.getU0()),
-                inverseExtent(sprite.getV1() - sprite.getV0()), RtMaterialDesc.EmissionSummary.NONE, null);
+                uv.u(), uv.v(), uv.inverseDu(), uv.inverseDv(), RtMaterialDesc.EmissionSummary.NONE, null,
+                stats.averageR(), stats.averageG(), stats.averageB(), stats.averageA(),
+                stats.uniformSummary(), stats.grid());
     }
 
     private record Decoded(List<RtMaterialTextureData.Level> levels,
-                           RtMaterialDesc.EmissionSummary emissionSummary, RtEmissionGrid emissionGrid) {
+                           RtMaterialDesc.EmissionSummary emissionSummary,
+                           RtEmissionGrid emissionGrid, AlbedoStats stats) {
     }
 
-    /** Reduce a per-texel emission mask to the light collector's summary grid (premultiplied by albedo). */
     private static RtEmissionGrid emissionGrid(float[] linearAlbedo, float[] mask, int width, int height) {
         RtEmissionGrid.Builder builder = new RtEmissionGrid.Builder(width, height);
         for (int y = 0; y < height; y++) {
             for (int x = 0; x < width; x++) {
                 int pixel = y * width + x;
-                float weight = Math.max(0.0f, Math.min(1.0f, mask[pixel]));
+                float weight = Math.clamp(mask[pixel], 0.0f, 1.0f);
                 int i = pixel * 4;
                 builder.add(x, y, linearAlbedo[i] * weight, linearAlbedo[i + 1] * weight,
                         linearAlbedo[i + 2] * weight, weight);
@@ -353,39 +305,35 @@ public final class RtBlockMaterials {
     }
 
     private static Decoded decode(Candidate candidate) throws Exception {
-        NativeImage spec = (candidate.features & RtMaterialRegistry.FEATURE_SPEC) != 0
-                ? load(candidate.specLocation) : null;
-        NativeImage normalMap = (candidate.features & RtMaterialRegistry.FEATURE_NORMAL) != 0
-                ? load(candidate.normalLocation) : null;
-        NativeImage resourceAlbedo = candidate.blockSprite() ? null : load(candidate.albedoLocation);
-        try {
-            int width = candidate.width;
-            int height = candidate.height;
+        try (MaterialImage albedo = candidate.asset.albedo().open();
+             MaterialImage spec = open(candidate.asset.labPbrSpecular());
+             MaterialImage normalMap = open(candidate.asset.labPbrNormal())) {
+            int width = candidate.width();
+            int height = candidate.height();
             float[] surface0 = new float[width * height * 4];
             float[] normal = new float[surface0.length];
             float[] surface1 = new float[surface0.length];
             float[] linearAlbedo = new float[surface0.length];
             float[] authoredEmission = spec != null ? new float[width * height] : null;
-            NativeImage albedo = candidate.blockSprite()
-                    ? ((SpriteContentsAccessor) candidate.sprite.contents()).caustica$originalImage()
-                    : resourceAlbedo;
+            StatsAccumulator stats = new StatsAccumulator(width, height);
             for (int y = 0; y < height; y++) {
                 for (int x = 0; x < width; x++) {
                     int i = (y * width + x) * 4;
-                    int albedoPixel = albedo != null ? albedo.getPixel(x, y) : -1;
-                    float ar = RtMaterialTextureData.srgbToLinear(ARGB.red(albedoPixel));
-                    float ag = RtMaterialTextureData.srgbToLinear(ARGB.green(albedoPixel));
-                    float ab = RtMaterialTextureData.srgbToLinear(ARGB.blue(albedoPixel));
-                    float aa = ARGB.alpha(albedoPixel) / 255.0f;
+                    int albedoPixel = sample(albedo, x, y, width, height);
+                    stats.add(x, y, albedoPixel);
+                    float ar = RtMaterialTextureData.srgbToLinear(red(albedoPixel));
+                    float ag = RtMaterialTextureData.srgbToLinear(green(albedoPixel));
+                    float ab = RtMaterialTextureData.srgbToLinear(blue(albedoPixel));
+                    float aa = alpha(albedoPixel) / 255.0f;
                     linearAlbedo[i] = ar;
                     linearAlbedo[i + 1] = ag;
                     linearAlbedo[i + 2] = ab;
                     linearAlbedo[i + 3] = aa;
                     if (spec != null) {
-                        int pixel = sample(spec, x, y, width, height, candidate.blockSprite());
+                        int pixel = sample(spec, x, y, width, height);
                         RtLabPbr.Texel decoded = RtLabPbr.decodeSpec(
-                                ARGB.red(pixel) / 255.0f, ARGB.green(pixel) / 255.0f,
-                                ARGB.blue(pixel) / 255.0f, ARGB.alpha(pixel) / 255.0f, ar, ag, ab);
+                                red(pixel) / 255.0f, green(pixel) / 255.0f,
+                                blue(pixel) / 255.0f, alpha(pixel) / 255.0f, ar, ag, ab);
                         surface0[i] = decoded.specularRoughness();
                         surface0[i + 1] = decoded.metalness();
                         surface0[i + 2] = decoded.emission();
@@ -400,13 +348,10 @@ public final class RtBlockMaterials {
                         surface1[i] = surface1[i + 1] = surface1[i + 2] = 1.0f;
                         surface1[i + 3] = RtLabPbr.encodeIor(OpenPbrMaterialDefaults.DEFAULT_SPECULAR_IOR);
                     }
-                    // LabPBR's ambient-occlusion channel is deliberately dropped: it approximates
-                    // occlusion for rasterisers that cannot trace it, and multiplying it into base colour
-                    // here would darken what the path tracer already computes.
                     if (normalMap != null) {
-                        int pixel = sample(normalMap, x, y, width, height, candidate.blockSprite());
-                        float nx = ARGB.red(pixel) / 127.5f - 1.0f;
-                        float ny = ARGB.green(pixel) / 127.5f - 1.0f;
+                        int pixel = sample(normalMap, x, y, width, height);
+                        float nx = red(pixel) / 127.5f - 1.0f;
+                        float ny = green(pixel) / 127.5f - 1.0f;
                         float lengthSq = nx * nx + ny * ny;
                         if (lengthSq > 1.0f) {
                             float invLength = 1.0f / (float) Math.sqrt(lengthSq);
@@ -415,7 +360,7 @@ public final class RtBlockMaterials {
                         }
                         normal[i] = nx * 0.5f + 0.5f;
                         normal[i + 1] = ny * 0.5f + 0.5f;
-                        normal[i + 3] = ARGB.alpha(pixel) / 255.0f;
+                        normal[i + 3] = alpha(pixel) / 255.0f;
                     } else {
                         normal[i] = normal[i + 1] = 0.5f;
                     }
@@ -427,23 +372,79 @@ public final class RtBlockMaterials {
                 emissionSummary = RtEmissionHeuristic.summarize(linearAlbedo, authoredEmission);
                 grid = emissionGrid(linearAlbedo, authoredEmission, width, height);
             }
-            boolean heuristic = (candidate.features & RtMaterialRegistry.FEATURE_EMISSION_MASK) != 0;
-            if (heuristic) {
+            if ((candidate.features & RtMaterialRegistry.FEATURE_EMISSION_MASK) != 0) {
                 RtEmissionHeuristic.Result emission = RtEmissionHeuristic.compile(linearAlbedo);
                 float[] mask = emission.mask();
-                for (int pixel = 0; pixel < mask.length; pixel++) {
-                    surface0[pixel * 4 + 2] = mask[pixel];
-                }
+                for (int pixel = 0; pixel < mask.length; pixel++) surface0[pixel * 4 + 2] = mask[pixel];
                 emissionSummary = emission.summary();
                 grid = emissionGrid(linearAlbedo, mask, width, height);
             }
             int maxLod = maxLodFor(width, height);
             return new Decoded(RtMaterialTextureData.mipChain(new RtMaterialTextureData.Level(width, height,
-                    surface0, normal, surface1), maxLod), emissionSummary, grid);
-        } finally {
-            if (spec != null) spec.close();
-            if (normalMap != null) normalMap.close();
-            if (resourceAlbedo != null) resourceAlbedo.close();
+                    surface0, normal, surface1), maxLod), emissionSummary, grid, stats.finish());
+        }
+    }
+
+    static AlbedoStats scanAlbedo(MaterialTextureAsset asset) throws Exception {
+        try (MaterialImage image = asset.albedo().open()) {
+            StatsAccumulator stats = new StatsAccumulator(asset.width(), asset.height());
+            for (int y = 0; y < asset.height(); y++) {
+                for (int x = 0; x < asset.width(); x++) {
+                    stats.add(x, y, sample(image, x, y, asset.width(), asset.height()));
+                }
+            }
+            return stats.finish();
+        }
+    }
+
+    private static final class StatsAccumulator {
+        private final int width;
+        private final int height;
+        private final RtEmissionGrid.Builder grid;
+        private long sr;
+        private long sg;
+        private long sb;
+        private long sa;
+        private double lr;
+        private double lg;
+        private double lb;
+        private int covered;
+
+        StatsAccumulator(int width, int height) {
+            this.width = width;
+            this.height = height;
+            grid = new RtEmissionGrid.Builder(width, height);
+        }
+
+        void add(int x, int y, int pixel) {
+            int a = alpha(pixel);
+            int r = red(pixel);
+            int g = green(pixel);
+            int b = blue(pixel);
+            sr += r;
+            sg += g;
+            sb += b;
+            sa += a;
+            float coverage = a / 255.0f;
+            float pr = RtMaterialTextureData.srgbToLinear(r) * coverage;
+            float pg = RtMaterialTextureData.srgbToLinear(g) * coverage;
+            float pb = RtMaterialTextureData.srgbToLinear(b) * coverage;
+            lr += pr;
+            lg += pg;
+            lb += pb;
+            grid.add(x, y, pr, pg, pb, coverage);
+            if (a > 1) covered++;
+        }
+
+        AlbedoStats finish() {
+            float inv = 1.0f / (width * (float) height);
+            float scale = inv / 255.0f;
+            double luminance = 0.2126 * lr + 0.7152 * lg + 0.0722 * lb;
+            RtMaterialDesc.EmissionSummary uniform = luminance <= 0.0
+                    ? RtMaterialDesc.EmissionSummary.NONE
+                    : new RtMaterialDesc.EmissionSummary((float) (lr * inv), (float) (lg * inv),
+                    (float) (lb * inv), (float) (luminance * inv), covered * inv);
+            return new AlbedoStats(sr * scale, sg * scale, sb * scale, sa * scale, uniform, grid.build());
         }
     }
 
@@ -458,12 +459,10 @@ public final class RtBlockMaterials {
             surface0 = allocate(pageSize, mipCount, 255, 0, 0, 0);
             normal = allocate(pageSize, mipCount, 128, 128, 0, 0);
             surface1 = allocate(pageSize, mipCount, 255, 255, 255,
-                    RtMaterialTextureData.unorm8(RtLabPbr.encodeIor(
-                            OpenPbrMaterialDefaults.DEFAULT_SPECULAR_IOR)));
+                    RtMaterialTextureData.unorm8(RtLabPbr.encodeIor(OpenPbrMaterialDefaults.DEFAULT_SPECULAR_IOR)));
         }
 
         void writeFallback() {
-            // Neutral arrays already contain the fallback texel and its replicated surroundings.
         }
 
         void write(Candidate candidate, List<RtMaterialTextureData.Level> levels) {
@@ -499,11 +498,11 @@ public final class RtBlockMaterials {
         private static void blit(byte[] dst, int dstWidth, int cx, int cy, int gutter,
                                  int srcWidth, int srcHeight, float[] src) {
             for (int dy = -gutter; dy < srcHeight + gutter; dy++) {
-                int sy = Math.max(0, Math.min(srcHeight - 1, dy));
+                int sy = Math.clamp(dy, 0, srcHeight - 1);
                 int ty = cy + dy;
                 if (ty < 0 || ty >= dstWidth) continue;
                 for (int dx = -gutter; dx < srcWidth + gutter; dx++) {
-                    int sx = Math.max(0, Math.min(srcWidth - 1, dx));
+                    int sx = Math.clamp(dx, 0, srcWidth - 1);
                     int tx = cx + dx;
                     if (tx < 0 || tx >= dstWidth) continue;
                     int si = (sy * srcWidth + sx) * 4;
@@ -517,101 +516,35 @@ public final class RtBlockMaterials {
         }
     }
 
-    static List<TextureAtlasSprite> blockSprites() {
-        TextureAtlas atlas = (TextureAtlas) Minecraft.getInstance().getTextureManager()
-                .getTexture(TextureAtlas.LOCATION_BLOCKS);
-        List<TextureAtlasSprite> sprites = ((TextureAtlasAccessor) atlas).caustica$sprites();
-        return sprites != null ? sprites : List.of();
-    }
-
-    private static Map<Identifier, Integer> discoverEntityMaterialResources(
-            List<TextureAtlasSprite> blockSprites, RtMaterialOverrides overrides) {
-        Set<Identifier> blockNames = new HashSet<>();
-        for (TextureAtlasSprite sprite : blockSprites) {
-            if (sprite != null) blockNames.add(sprite.contents().name());
-        }
-        Map<Identifier, Integer> result = new LinkedHashMap<>();
-        Map<Identifier, Resource> authored = Minecraft.getInstance().getResourceManager().listResources(
-                "textures", id -> id.getPath().endsWith("_s.png") || id.getPath().endsWith("_n.png"));
-        List<Identifier> ordered = new ArrayList<>(authored.keySet());
-        ordered.sort(Comparator.comparing(Identifier::toString));
-        for (Identifier material : ordered) {
-            String path = material.getPath();
-            boolean spec = path.endsWith("_s.png");
-            String albedoPath = path.substring(0, path.length() - 6) + ".png";
-            Identifier albedo = Identifier.fromNamespaceAndPath(material.getNamespace(), albedoPath);
-            Identifier name = logicalTextureName(albedo);
-            if (blockNames.contains(name) || !resourceExists(albedo)) continue;
-            result.merge(albedo, spec ? RtMaterialRegistry.FEATURE_SPEC
-                    : RtMaterialRegistry.FEATURE_NORMAL, (a, b) -> a | b);
-        }
-        // Also register any non-block sprite a rule targets, even lacking _s/_n, so overrides
-        // (roughness/metalness/model, or an absolute emission.strength_cd_m2 once some other source
-        // supplies emission) have a compiled Candidate/Entry to apply to.
-        for (RtMaterialOverrides.Rule rule : overrides.rules()) {
-            if (rule.geometry() != null || blockNames.contains(identifier(rule.material()))) {
-                continue;
-            }
-            Identifier albedo = textureLocation(identifier(rule.material()));
-            if (resourceExists(albedo)) {
-                result.merge(albedo, 0, (a, b) -> a | b);
-            }
-        }
-        return result;
-    }
-
-    private static Identifier sibling(Identifier name, String suffix) {
-        return Identifier.fromNamespaceAndPath(name.getNamespace(), "textures/" + name.getPath() + suffix);
-    }
-
-    private static Identifier identifier(ResourceId id) {
-        return Identifier.fromNamespaceAndPath(id.namespace(), id.path());
-    }
-
-    private static Identifier textureLocation(Identifier logicalName) {
-        return Identifier.fromNamespaceAndPath(logicalName.getNamespace(),
-                "textures/" + logicalName.getPath() + ".png");
-    }
-
-    /** Strip the {@code textures/} prefix and {@code .png} suffix shared by all material resource paths. */
-    static Identifier logicalTextureName(Identifier textureLocation) {
-        String path = textureLocation.getPath();
-        if (path.startsWith("textures/")) path = path.substring("textures/".length());
-        if (path.endsWith(".png")) path = path.substring(0, path.length() - 4);
-        return Identifier.fromNamespaceAndPath(textureLocation.getNamespace(), path);
-    }
-
     static int maxLodFor(int width, int height) {
         return Math.min(MAX_VALID_LOD, 31 - Integer.numberOfLeadingZeros(Math.max(width, height)));
     }
 
-    private static Identifier siblingTexture(Identifier albedo, String suffix) {
-        String path = albedo.getPath();
-        if (path.endsWith(".png")) path = path.substring(0, path.length() - 4);
-        return Identifier.fromNamespaceAndPath(albedo.getNamespace(), path + suffix + ".png");
+    private static MaterialImage open(dev.comfyfluffy.caustica.engine.material.MaterialImageSource source)
+            throws Exception {
+        return source == null ? null : source.open();
     }
 
-    private static boolean resourceExists(Identifier location) {
-        return Minecraft.getInstance().getResourceManager().getResource(location).isPresent();
+    private static int sample(MaterialImage image, int x, int y, int width, int height) {
+        int sx = Math.min(image.width() - 1, x * image.width() / width);
+        int sy = Math.min(image.height() - 1, y * image.height() / height);
+        return image.argb(sx, sy);
     }
 
-    private static NativeImage load(Identifier location) throws Exception {
-        Optional<Resource> resource = Minecraft.getInstance().getResourceManager().getResource(location);
-        if (resource.isEmpty()) return null;
-        try (InputStream input = resource.get().open()) {
-            return NativeImage.read(input);
-        }
+    private static int alpha(int argb) {
+        return argb >>> 24;
     }
 
-    private static int sample(NativeImage image, int x, int y, int width, int height, boolean firstFrameOnly) {
-        int sampledHeight = firstFrameOnly ? Math.min(image.getHeight(), image.getWidth()) : image.getHeight();
-        int sx = Math.min(image.getWidth() - 1, x * image.getWidth() / width);
-        int sy = Math.min(sampledHeight - 1, y * sampledHeight / height);
-        return image.getPixel(sx, sy);
+    private static int red(int argb) {
+        return argb >>> 16 & 255;
     }
 
-    static float inverseExtent(float extent) {
-        return Math.abs(extent) > 1.0e-12f ? 1.0f / extent : 0.0f;
+    private static int green(int argb) {
+        return argb >>> 8 & 255;
+    }
+
+    private static int blue(int argb) {
+        return argb & 255;
     }
 
     private static int nextPowerOfTwo(int value) {
@@ -623,7 +556,6 @@ public final class RtBlockMaterials {
         return (value + alignment - 1) & -alignment;
     }
 
-    // Synchronized: decode failures can now arrive from parallel workers.
     private synchronized void warnOnce(String message, Throwable throwable) {
         if (!loggedFailure) {
             loggedFailure = true;
